# Koros

./: .gitignore  AGENTS.md  Cargo.toml  Makefile  build.rs  rust-toolchain.toml
kor-alloc/: Cargo.toml
korhv/: Cargo.toml  build.rs  linker.lds
korhv/linux-demo/: README.md  init.c  initramfs.list  run.sh  run2.sh  virt.dts
korhv/src/: heap.rs  main.rs  panic.rs
korhv/src/arch/: mod.rs
korhv/src/arch/aarch64/: boot.S  boot.rs  console.rs  hyp.rs  mm.rs  mod.rs  provider.rs
korhv/src/arch/x86_64/: boot.rs  console.rs  hyp.rs  mm.rs  mod.rs  multiboot.S  provider.rs  trap.rs
koros/: Cargo.toml  build.rs
koros-core/: Cargo.toml
koros-core/src/: bench.rs  lib.rs  platform.rs
koros-core/src/arch/aarch64/: boot.rs  context.rs  gic.rs  mm.rs  mod.rs  smp.rs  time.rs  trap.rs
koros-core/src/arch/loongarch64/: boot.rs  irq.rs  mm.rs  mod.rs  smp.rs  time.rs  trap.rs
koros-core/src/arch/riscv64/: boot.S  boot.rs  irq.rs  mm.rs  mod.rs  plic.rs  smp.rs  time.rs  trap.S  trap.rs
koros-core/src/arch/x86_64/: boot.rs  context.rs  irq.rs  mm.rs  mod.rs  smp.rs  time.rs  trap.rs
koros-core/src/cmdline/: mod.rs
koros-core/src/drivers/: driver.rs  mod.rs  virtio.rs
koros-core/src/fs/: mod.rs  mount.rs
koros-core/src/irq/: mod.rs
koros-core/src/mm/: fdt.rs  frame_allocator.rs  heap.rs  mod.rs  page_table.rs
koros-core/src/sched/: mod.rs
koros-core/src/smp/: mod.rs
koros-core/src/sync/: mod.rs
koros-core/src/time/: mod.rs
koros-core/src/trap/: mod.rs
koros/src/: bench.rs  ext2_test.rs  heap.rs  main.rs  panic.rs  registries.rs  virtio.rs
(+154 files in other folders)
