[package]
name = "korhv"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "korhv"
path = "src/main.rs"

[dependencies]
kor = { path = "../kor" }
kor-frame = { path = "../kor-frame" }
kor-alloc = { path = "../kor-alloc" }
spin = "0.9"

[target.'cfg(target_arch = "x86_64")'.dependencies]
x86_64 = "0.15"
