[package]
name = "koros-core"
version = "0.1.0"
edition = "2024"

[lib]
name = "koros_core"

[dependencies]
buddy_system_allocator = { version = "0.11", default-features = false, features = ["alloc", "use_spin"] }
cfg-if = "1"
fdt = { version = "0.2.0-alpha2", default-features = false }
spin = "0.9"
virtio-drivers = "0.13.0"
x86_64 = "0.15"
