[package]
name = "koros"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "koros"
path = "src/main.rs"

[dependencies]
kor = { path = "../kor" }
kor-frame = { path = "../kor-frame" }
kor-alloc = { path = "../kor-alloc" }
kor-fs = { path = "../kor-fs" }
kor-ext2 = { path = "../kor-ext2" }
kor-ramfs = { path = "../kor-ramfs" }
kor-sched = { path = "../kor-sched" }
kor-arch = { path = "../kor-arch" }
spin = "0.9"
virtio-drivers = "0.13.0"

[target.'cfg(target_arch = "x86_64")'.dependencies]
x86_64 = "0.15"
